[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.*",
    "/dist",
    "/tests",
    "/utils",
]

[project]
name = "templatex"
version = "0.0.1"
authors = [
    { name = "Hao Wu", email = "haowu@dataset.sh" },
]
description = ""
requires-python = ">=3.8"
dependencies = [
    "jinja2 ~= 3.0.0"
]
license = { file = "LICENSE" }

